@@ -189,6 +189,12 @@ gchar *s = N_("Session configuration");
 gchar *s = N_("Session directory: ");
 gchar *s = N_("Select a directory to be used for system-wide session scripts");
 gchar *s = N_("Available Sessions");
+gchar *s = N_("Show the Gnome Chooser session, if a session named 'Gnome' is present");
+gchar *s = N_("Gnome Chooser");
+gchar *s = N_("Show the Gnome failsafe session");
+gchar *s = N_("Gnome Failsafe");
+gchar *s = N_("Show the Xterm failsafe session");
+gchar *s = N_("Xterm Failsafe");
 gchar *s = N_("Add session");
 gchar *s = N_("Remove session");
 gchar *s = N_("Set as default");
