@@ -4398,6 +4398,51 @@ tr_TR
 	      </widget>
 
 	      <widget>
+		<class>GtkCheckButton</class>
+		<name>gnome_chooser_session</name>
+		<tooltip>Show the Gnome Chooser session, if a session named 'Gnome' is present</tooltip>
+		<can_focus>True</can_focus>
+		<label>Gnome Chooser</label>
+		<active>False</active>
+		<draw_indicator>True</draw_indicator>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
+	      </widget>
+
+	      <widget>
+		<class>GtkCheckButton</class>
+		<name>gnome_failsafe_session</name>
+		<tooltip>Show the Gnome failsafe session</tooltip>
+		<can_focus>True</can_focus>
+		<label>Gnome Failsafe</label>
+		<active>False</active>
+		<draw_indicator>True</draw_indicator>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
+	      </widget>
+
+	      <widget>
+		<class>GtkCheckButton</class>
+		<name>xterm_failsafe_session</name>
+		<tooltip>Show the Xterm failsafe session</tooltip>
+		<can_focus>True</can_focus>
+		<label>Xterm Failsafe</label>
+		<active>False</active>
+		<draw_indicator>True</draw_indicator>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
+	      </widget>
+
+	      <widget>
 		<class>GtkHSeparator</class>
 		<name>hseparator6</name>
 		<child>
