@@ -1,3 +1,11 @@
+Fri Jun 22 19:13:05 2001  George Lebl <jirka@5z.com>
+
+	* docs/C/gdm.sgml: fix indirect wait entry, add entries for the
+	  showing of different built in sessions (failsafes, chooser)
+
+	* gui/gdmconfig.(c|glade): add toggeling of builtin sessions
+	  (failsafes, chooser)
+
 Fri Jun 22 18:53:14 2001  George Lebl <jirka@5z.com>
 
 	* daemon/xdmcp.c: fix up the forward query sending/handeling, fix
